# soundings

./: .gitignore  CLAUDE.md  README.md  session-log.md
.claude/: CLAUDE-context.md
.claude/agents/: architect.md  code-review.md  pm.md  sync-config.md  ui-reviewer.md
contracts/: README.md  packet-v1-explained.md  packet-v1.md
contracts/tools/: gen_vectors.py
contracts/vectors/: packet-v1.json
deploy/: README.md  docker-compose.yml
deploy/grafana/dashboards/: soundings-sim.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: victoriametrics.yml
deploy/mosquitto/: mosquitto.conf
docs/: AGENTS.md  BRAND.md  DECISIONS.md  PROJECT_PLAN.md  RETROSPECTIVES.md  SPEC.md  USER_STORIES.md  VELOCITY_AND_POKER_GUIDE.md  tank-level-sensor.md
firmware/: .gitignore  platformio.ini
firmware/src/core/: elapsed.h  iclock.h  isensor.h  packet.cpp  packet.h
firmware/src/esp32/: main.cpp
firmware/test/test_native/: test_main.cpp
firmware/test/test_native/fakes/: fake_clock.h  fake_sensor.h
firmware/test/test_packet/: test_packet.cpp
gateway/: .gitignore  pyproject.toml
gateway/soundings_gateway/: __init__.py  emitter.py  gateway.py  ingest.py  packet.py  source.py  spine.py
gateway/tests/: test_emitter.py  test_packet.py  test_spine.py
sessions/: 2026-06-15-1541-eric-main.md  2026-07-10-0101-eric-main.md  README.md
tiller-proposals/: 2026-06-11-vpd-irrigation-forecast.md  2026-06-22-adversarial-sim-link-health.md  2026-07-03-energy-accountant-sim.md
